Fix viewport meta tag and update description in base.html

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="flask-todo-list: https://github.com/Luminaire1337/flask-todo-list"
     />
-    <meta name="description" content="A modern Flask Todo List application" />
     <meta name="theme-color" content="#3b82f6" />
     <title>Todo List - {% block title %}{% endblock %}</title>
     <!-- Custom CSS -->
