--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,19 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<h2 class="mb-4">
+<header class="mb-4">
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <img style="width: 20%; justify-content: center; border-radius: 5%;" src="{{ url_for('static', filename='img/logo.png') }}" class="logo" alt="Logo">
+    </div>
+    <h2 class="mt-4">
+    <img src="{{ url_for('static', filename='icons/info.svg') }}" class="icon" alt="Info"> Information about this project:
+    </h2>
+    <span class="mt-4">
+        This project is a simple implementation of a Todo List using Python and Flask. The main objective of this project is to demonstrate the use of Flask as the sole Python package for building a web application. This project was developed as part of a university assignment.
+    </span>
+</header>
+
+<h2 class="mt-4">
     <img src="{{ url_for('static', filename='icons/list.svg') }}" class="icon" alt="List"> Your Tasks
 </h2>
 
@@ -50,4 +62,54 @@
         </tbody>    
     </table>
     {% endif %}
+    <div style="margin-top: 20rem; border-top: solid;">
+        <h2 class="mt-4">Add your review!</h2>
+        <form action="{{ url_for('review.index') }}" method="POST">
+            <div class="form-group">
+                <input name="title" id="title" type="text" class="form-control" placeholder="Title" required>
+                <input name="username" id="username" type="text" class="form-control mt-2" placeholder="Your name" required>
+                <textarea name="content" id="content" class="form-control mt-2" placeholder="Write your review here..." rows="3" required></textarea>
+                <select name="rating" id="rating" class="form-control mt-2" required>
+                    <option value="" disabled selected>Select a rating</option>
+                    <option value="1">1 Star</option>
+                    <option value="2">2 Stars</option>
+                    <option value="3">3 Stars</option>
+                    <option value="4">4 Stars</option>
+                    <option value="5">5 Stars</option>
+                </select>
+                <button class="form-control btn btn-primary mt-2" type="submit">
+                    <img src="{{ url_for('static', filename='icons/plus.svg') }}" class="icon" alt="Plus"> Add Review
+                </button>
+            </div>
+        </form>
+    </div>
+    <div style="margin-top: 5rem; border-top: solid;">
+        <h2 class="mt-4">Reviews</h2>
+        {% if reviews|length == 0 %}
+        <p class="text-center">No reviews found</p>
+        {% else %}
+        <div class="row">
+            {% for review in reviews %}
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ friendly_string_sub(review['title'], 32) }}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">By {{ review['username'] }} - {{ time_ago(review['created_at']) }}</h6>
+                        <p class="card-text">{{ friendly_string_sub(review['content'], 64) }}</p>
+                        <p class="card-text">
+                            {% for i in range(1, 6) %}
+                                {% if i <= review['rating'] %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="gold" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star-icon lucide-star"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"/></svg>
+                                {% else %}
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-star-icon lucide-star"><path d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"/></svg>
+                                {% endif %}
+                            {% endfor %}
+                        </p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% endif %}
+    </div>
 {% endblock %}
